# nix-eval

./: .gitignore  Cargo.toml  inherit.nix  test.nix
benches/: bench_nixpkgs.rs
src/expr/: builtins.rs  expr_ref.rs  lower.rs  mod.rs
src/expr/eval/: builtins.rs  error.rs  mod.rs  thunk.rs  value.rs
src/expr/eval/builtins/: control.rs  list.rs  mod.rs  ops.rs  set.rs  string.rs  util.rs
tests/: run_test.rs
tests/eval_test/: 0000-basic.nix  0000-basic.out  0001-builtins-zero-param.nix  0001-builtins-zero-param.out  0001-builtins.nix  0001-builtins.out  0002-lambda.nix  0002-lambda.out  0003-builtins-eq.nix  0003-sort.out  0004-builtins-throw.nix  0005-builtins-control.nix  0006-builtins-util.nix  0006-builtins-util.out  0007-builtins-arith.nix  0008-builtins-compare.nix  1000-sort.nix  1000-sort.out
tests/lower_test/: 0000-basic.nix  0000-basic.out  0001-lambda.nix  0001-lambda.out  0002-attr_set.nix  0002-attr_set.out  0003-with.nix  0003-with.out  0004-builtins.nix  0004-builtins.out  0005-attr_with_lambda.nix  0005-attr_with_lambda.out  1000-hello.out
