[package]
name = "nix-eval"
version = "0.1.0"
authors = ["oxalica <oxalicc@pm.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.34"
rnix = "0.8.0"
static_assertions = "1.1.0"
thiserror = "1.0.22"
typed-arena = "2.0.1"
