[package]
name = "nix-eval"
version = "0.1.0"
authors = ["oxalica <oxalicc@pm.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bench]]
name = "bench_nixpkgs"
harness = false

[dependencies]
anyhow = "1.0.34"
either = "1.6.1"
im = "15.0.0"
once_cell = "1.5.2"
rnix = "0.8.0"
static_assertions = "1.1.0"
strum = { version = "0.20.0", features = ["derive"] }
thiserror = "1.0.22"
typed-arena = "2.0.1"

[dev-dependencies]
criterion = "0.3.3"

[profile.release]
debug = 1 # Line tables only
